--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -6,16 +6,17 @@
 
 
 header{
-    
+    background-image: url(../IMAGES/hero.jpg);
+    width: 100%;
+    height: 60em;
+    background-size: 100% 115%;
+    background-repeat: no-repeat;
+    background-color: aqua;
      nav{
-          position: absolute;
           display: flex;
           justify-content: space-around;
      }
-     ul{
-          margin-left: 37em;
-
-     }
+    
      li{
           display: inline-block;
           margin-right: 2em;
