--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -8,6 +8,7 @@
 body {
   font-family: 'Josefin Sans', sans-serif;
   overflow-x: hidden;
+  color: whitesmoke;
 }
 
 header {
@@ -106,6 +107,10 @@ header .animationSign .material-icons {
   font-size: 2em;
 }
 
+header .animationSign a {
+  color: whitesmoke;
+}
+
 @-webkit-keyframes jump {
   0% {
     -webkit-transform: translateY(15px);
@@ -134,5 +139,41 @@ header .animationSign .material-icons {
     -webkit-transform: translateY(15px);
             transform: translateY(15px);
   }
+}
+
+main {
+  background-color: black;
+  padding: 5% 0%;
+}
+
+main .spannedLi {
+  border: none;
+}
+
+main li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin: .75% 30%;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.144);
+}
+
+main li div {
+  display: inline-block;
+}
+
+main li div span {
+  font-size: .75em;
+}
+
+main iframe {
+  margin: 0% 35%;
 }
 /*# sourceMappingURL=styles.css.map */
