--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -8,13 +8,14 @@ body{
      font-family: 'Josefin Sans', sans-serif;
      overflow-x: hidden;
      color: whitesmoke;
+     background-color: black;
 }
 
 header{
     background-image: url(../IMAGES/hero.jpg);
     width: 100%;
     height: 57em;
-    background-size: 100% 115%;
+    background-size: 100% 80%;
     background-repeat: no-repeat;
     color: whitesmoke;
 
@@ -53,7 +54,9 @@ header{
      }
      p{
           text-align: center;
-          margin-top: 30%;
+          margin-top: 27%;
+          font-size: .9em;
+
           
      }
 
@@ -62,11 +65,17 @@ header{
           display: flex;
           justify-content: center;
           .specs{
-               margin: auto 2.5%;
+               margin: 1.1% 2.5%;
+               h3{
+                    font-size: 1.2em;
+
+               }
+
                .material-icons{
                     position: absolute;
-                    margin: -2% -2.5%;
+                    margin: -2.75% -3.5%;
                     font-size: 1.5em;
+                    
                }
                p{
                     margin-top: -5%;
@@ -91,7 +100,9 @@ header{
           animation: both;
           .material-icons{
                animation: jump 1.5s ease-in-out infinite;
-               font-size: 2em;
+               font-size: 1.75em;
+           
+
           }
           a{
                color: whitesmoke;
@@ -116,12 +127,12 @@ main{
      z-index: 0;
      background-color: black;
      padding: 5% 0%;
+     margin: -12% auto;
      .spannedLi{
           border: none;
      }
      li{
           position: relative;
-
           z-index: 2;
           display: flex;
           flex-direction: row;
@@ -137,16 +148,18 @@ main{
           }
      }
      iframe{
-          margin: 0% 35%;
-          animation: iframeAnim 1s ease-in-out infinite;
-          
-
-          
+          margin: 0% 28%;
+          margin-top: -5%;
      }
-     @keyframes iframeAnim {
+     @keyframes standardAnimation {
           0%{
                transform: translateY(50px);
+               opacity: 0;
           }
+        
+     }
+     .anim{
+          animation: standardAnimation 1.5s ease-in-out;
      }
      #backImg{
           position: relative;
@@ -154,11 +167,10 @@ main{
           display: block;
           margin-left: auto;
           margin-right: auto;
-          transform: translateY(-17%);
+          transform: translateY(-16.5%);
           width: 90%;
           border: 2px solid rgba(128, 128, 128, 0.26);
           outline: 3px solid rgba(187, 187, 187, 0.075);
-          animation: iframeAnim 1.5s ease-in-out 1;
           
      }
      .backImgText{
