--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -172,6 +172,7 @@ main{
           border: 2px solid rgba(128, 128, 128, 0.26);
           outline: 3px solid rgba(187, 187, 187, 0.075);
           
+          
      }
      .backImgText{
           display: flex;
@@ -179,9 +180,78 @@ main{
           z-index: 2;
           justify-content: space-evenly;
           margin: 0% 5%;
-          margin-top: -20em;
+          margin-top: -20em;   
+          overflow-wrap: break-word;
 
-          
+     }
+
+     #interiorImg{
+          z-index: 3;
+          position: relative;
+          width: 60%;
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          margin-top: 5%;
           
      }
+     .interiorText{
+          display: flex;
+          justify-content: center;
+          div{
+               margin: auto 4.25%;
+          }
+     }
+     #topImg_1{
+          position: relative;
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          width: 100%;
+
+     }
+
+     #topImg_2{
+          position: relative;
+          display: none;
+          margin-left: auto;
+          margin-right: auto;
+          width: 100%;
+          margin-top: -70.2%;
+     }
+     @keyframes activeAnim {
+          0%{
+               opacity: 0;
+          }
+          100%{
+               opacity: 1;
+          }
+     }
+    
+     #topImg_2.active{
+          display: block;
+          animation: activeAnim;
+          animation-duration: 1s;
+          pointer-events: visible;
+     }
+     
+     .carTopText{
+          position: relative;
+          z-index: 5;
+          margin: 0% 20%;
+          margin-top: -15%;
+          transform: translateY(-5em);
+          span{
+               
+               font-size: .3em;
+          }
+
+     }
+    
+   
+
+
+     
+    
+     
 }
