--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -22,10 +22,10 @@ header {
 }
 
 header nav {
-  color: black;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  color: black;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -33,15 +33,15 @@ header nav {
   font-size: .9em;
 }
 
-header li {
+header nav li {
   display: inline-block;
 }
 
-header .mainUl li {
+header nav .mainUl li {
   margin: 0% 1em;
 }
 
-header .secondUl li {
+header nav .secondUl li {
   margin-left: 2em;
 }
 
@@ -145,6 +145,38 @@ header .animationSign a {
     -webkit-transform: translateY(15px);
             transform: translateY(15px);
   }
+}
+
+header .hamburgerContainer {
+  position: absolute;
+  background-color: aqua;
+}
+
+header .hamburgerContainer .hamburger {
+  width: 35px;
+  height: 5px;
+  background-color: black;
+  margin: 6px 0;
+}
+
+header nav.active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-animation-name: activeAnim;
+          animation-name: activeAnim;
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+}
+
+header nav.active li {
+  display: block;
+}
+
+header nav.active ul {
+  background-color: rgba(255, 255, 255, 0.74);
+  border-radius: .3em;
+  border: 1px dashed rgba(155, 155, 155, 0.432);
 }
 
 main {
@@ -270,8 +302,6 @@ main #topImg_1 {
           animation-name: activeAnim;
   -webkit-animation-duration: 2.5s;
           animation-duration: 2.5s;
-  -webkit-animation-iteration-count: infinite;
-          animation-iteration-count: infinite;
 }
 
 main #topImg_2 {
@@ -288,7 +318,7 @@ main #topImg_2 {
     opacity: 0;
   }
   50% {
-    opacity: 1;
+    opacity: 0.1;
   }
 }
 
@@ -297,7 +327,7 @@ main #topImg_2 {
     opacity: 0;
   }
   50% {
-    opacity: 1;
+    opacity: 0.1;
   }
 }
 
