--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -1,3 +1,4 @@
+@import "mixins.scss";
 *{
      margin: 0;
      padding: 0;
@@ -9,6 +10,9 @@ body{
      overflow-x: hidden;
      color: whitesmoke;
      background-color: black;
+     button{
+          @include buttonMixin;
+     }
 }
 
 header{
@@ -84,15 +88,7 @@ header{
                }
                
           }
-          button{
-               color: whitesmoke;
-               padding: 0em 2.5em;
-               margin: 1em 0em;
-               border-radius: 2em;
-               border: none;
-               background: transparent;
-               border-bottom: 1px solid white;
-          }
+     
  
       
      }
@@ -284,20 +280,55 @@ main{
 
      .secondVideo{
           margin-top: 25%;
+          iframe{
+               display: block;
+               position: relative;
+               margin-left: auto;
+               margin-right: auto;
+
+          }
           p{
                text-align: center;
           }
      }
-
-
-
-    
-    
-
-
      
-    
+}
+
+footer{
+     #verticalLine{
+          position: relative;
+          width: 1px;
+          height: 10em;
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          margin-top: 10%;
+          margin-bottom: 5%;
+          background-color: rgba(47, 47, 47, 0.404);
+     }  
+     button{
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
+          border-top: 1px solid rgba(70, 70, 70, 0.356);
+          font-size: .75em;
+          margin-bottom: 1.5%;
+
+     }
+     ul{
+          text-align: center;
+          margin-bottom: 0px;
+          li{
+               text-decoration: underline;
+               display: inline-block;
+               margin: 0% .5%;
+               font-size: .5em;
+               
+          }
+         
+     }
      
+
 }
 
 
