--- a/CSS/styles.scss
+++ b/CSS/styles.scss
@@ -18,8 +18,8 @@ body{
 header{
     background-image: url(../IMAGES/hero.jpg);
     width: 100%;
-    height: 57em;
-    background-size: 100% 80%;
+    height: 65em;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     color: whitesmoke;
 
@@ -43,11 +43,6 @@ header{
                }
           }
      }
-    
-    
-
-   
-
      .HeaderHeroIMG{
           width: 100%;   
      }
@@ -60,8 +55,11 @@ header{
      }
      p{
           text-align: center;
-          margin-top: 27%;
+          margin-top: 20.5%;
           font-size: .9em;
+          font-size: 1.25em;
+          
+
 
           
      }
@@ -171,7 +169,9 @@ main{
           }
      }
      iframe{
-          margin: 0% 28%;
+          display: block;
+          margin-left: auto;
+          margin-right: auto;
           margin-top: -5%;
      }
      @keyframes standardAnimation {
@@ -179,6 +179,7 @@ main{
                transform: translateY(50px);
                opacity: 0;
           }
+          
         
      }
      .anim{
@@ -231,8 +232,6 @@ main{
           margin-left: auto;
           margin-right: auto;
           width: 100%;
-          animation-name: activeAnim;
-          animation-duration: 2.5s;
      }
 
      #topImg_2{
@@ -256,21 +255,24 @@ main{
           #topImg_2{
                position: relative;
                display: block;
-               transform: translateY(-4em);
+               transform: translateY(-6em);
                animation-name: activeAnim;
-               animation-duration: 1s; 
+               animation-duration: 2s; 
                transition: ease-in-out; 
                         
           }
+          h3{
+               margin-top: -18%;
+          }
+
          
      }
      
      .carTopText{
           h3,p{
-               
                position: relative;
                z-index: 5;
-               margin: 0% 20%;
+               margin: 3% 20%;
                margin-top: -14%;
                     
           }
