--- a/CSS/MediaQ.scss
+++ b/CSS/MediaQ.scss
@@ -1,8 +1,90 @@
 @media all and (min-width:300px) and (max-width:500px) {
      body{
           overflow-x: hidden;
-          width: 45em;
+          width: 100%;
           zoom: 50%;
+          #wall{
+               display: none;
+
+          }
+          #wall.active{
+               overflow:hidden;
+               position: absolute;
+               display: block;
+               width: 100%;
+               height: 400%;
+               z-index: 1;
+               background-color: rgb(141, 141, 141);
+               animation: wallAnimation .25s ease-in-out ;
+          }
+          @keyframes wallAnimation {
+               0%{
+                    opacity: .1;
+                    transform: translateX(20em);
+               }
+               40%{
+                    opacity: 1;
+               }
+               100%{
+                    
+                    transform: translateX(0em);
+               }
+          }
+     }
+     header{
+          background-image: url(../IMAGES/hero-mobile.jpg);
+          background-size: 100%;
+
+          #LogoImage{
+               display: block;
+               width: 40%;
+           }
+
+         .navDivs{
+              display: none;
+          }
+          
+          .navDivs.active{
+               display: block;
+               animation-name: activeAnim;
+               animation-duration: 1s; 
+               z-index: 2;
+               font-size: 3em;
+               img{
+                    display: none;
+               }
+               ul{
+                    margin-left: -120%;
+                   
+                    li{
+                         display: block;
+                         margin-bottom: 3em;
+                         border-bottom: 1px solid rgb(0, 0, 0);
+                    }
+               }
+               .secondUl{
+                    position: absolute;
+                    margin-top: 26em;
+                    margin-left: -105%;
+                       
+               }
+               
+          }
+          .hamburgerContainer{
+               position: absolute;
+               width: 5em;
+               height: 4em;
+               right: 0;
+               z-index: 2;
+               .hamburger{
+                width: 3.5em;
+                height: .5em;
+                background-color: rgb(73, 73, 73);
+                margin: 10% 0;
+                margin-left: auto;
+                margin-right: auto;
+               }
+          }
           
      }
 }
