--- a/CSS/MediaQ.scss
+++ b/CSS/MediaQ.scss
@@ -8,6 +8,7 @@
 
           }
           #wall.active{
+               overflow-y: hidden;
                position: absolute;
                display: block;
                width: 100%;
@@ -35,8 +36,9 @@
           background-size: 100%;
           margin-bottom: 15%;
           h1{
-               padding-top: 25%;
-               padding-bottom: 18%;
+               padding-top: 16%;
+               padding-bottom: 12%;
+               font-size: 7em;
           }
 
           #LogoImage{
@@ -52,14 +54,19 @@
                display: block;
                animation-name: activeAnim;
                animation-duration: 1s; 
+               transition: ease-out;
                z-index: 2;
                font-size: 3em;
                img{
                     display: none;
                }
                ul{
-                    margin-left: -160%;
-                    display: inline-block;
+                    margin-top: 1em;
+                    display: block;
+                    position: relative;
+                    margin-left: auto;
+                    margin-right: auto;
+                    transform: translateX(-5em);
                    
                     li{
                          display: block;
@@ -70,7 +77,7 @@
                .secondUl{
                     display: inline-block;
                     margin-top: 27em;
-                    margin-left: -235%; 
+                    margin-left: -12em;
                }
                
           }
@@ -97,5 +104,44 @@
                     }
                }
           }
-     }   
+     }
+     main{
+          .trigger.active{
+               #topImg_2{
+                    transform: translateY(-3em);
+               }
+          }
+     }
+            
+}
+
+@media all and (min-width:768px) {
+     header{
+          background-image: url(../IMAGES/hero-mobile.jpg);
+          background-size: 100% 120%;
+              .mainUl{
+                    display: flex;
+                    justify-content: center;
+                    white-space: nowrap;
+                    margin-left: -5em;
+               }
+               .navDivs{
+                    img{
+                         margin-top: 1.5em;
+                    }
+                    
+               }
+               .secondUl{
+                 margin-left: -1em;
+                    
+               }
+          h1{
+               padding-bottom: 45%;
+          }
+          .specs{
+               span{
+                    margin-right: 1em;
+               }
+          }    
+     }
 }
