MediaQ fully done (99%) added a separated IntersectionObserver for the hard top tesla to reduce latency and to manipulate animation settings separetly and fixed a nav random bug with the help of the new FLEX function on the chrome web dev kit

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -217,6 +217,11 @@ main .anim {
           animation: standardAnimation 1.5s ease-in-out;
 }
 
+main .animTopImage1 {
+  -webkit-animation: standardAnimation .75s ease-in-out;
+          animation: standardAnimation .75s ease-in-out;
+}
+
 main #backImg {
   position: relative;
   z-index: 1;
