--- a/CSS/MediaQ.css
+++ b/CSS/MediaQ.css
@@ -120,7 +120,7 @@
   }
 }
 
-@media all and (min-width: 768px) {
+@media all and (min-width: 501px) and (max-width: 1000px) {
   header {
     background-image: url(../IMAGES/hero-mobile.jpg);
     background-size: 100% 120%;
@@ -162,6 +162,45 @@
   main .carTopText p {
     -webkit-transform: translateY(2em);
             transform: translateY(2em);
+  }
+}
+
+@media all and (min-width: 1001px) and (max-width: 1439px) {
+  header {
+    background-size: 100%;
+    margin-bottom: -35%;
+  }
+  header h1 {
+    padding-bottom: 2%;
+  }
+  header #speedSpan {
+    margin: -3% -4%;
+  }
+  main .trigger.active #topImg_2 {
+    -webkit-transform: translateY(-3em);
+            transform: translateY(-3em);
+  }
+  main .carTopText h3 {
+    -webkit-transform: translateY(-4em);
+            transform: translateY(-4em);
+  }
+  main .carTopText p {
+    -webkit-transform: translateY(2em);
+            transform: translateY(2em);
+  }
+}
+
+@media all and (min-width: 1440px) and (max-width: 1900px) {
+  header nav {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  header h1 {
+    padding-bottom: 10%;
+  }
+  main .trigger.active #topImg_2 {
+    -webkit-transform: translateY(-4em);
+            transform: translateY(-4em);
   }
 }
 /*# sourceMappingURL=MediaQ.css.map */
