--- a/CSS/MediaQ.scss
+++ b/CSS/MediaQ.scss
@@ -115,7 +115,7 @@
             
 }
 
-@media all and (min-width:768px) {
+@media all and (min-width:501px) and (max-width:1000px) {
      header{
           background-image: url(../IMAGES/hero-mobile.jpg);
           background-size: 100% 120%;
@@ -160,6 +160,55 @@
                     transform: translateY(2em);
                }
                
+          }
+     }
+}
+
+@media all and (min-width:1001px) and (max-width:1439px) {
+     header{
+          background-size: 100%;
+          h1{
+               padding-bottom: 2%;
+          }
+          #speedSpan{
+               margin: -3% -4%;
+          }
+          margin-bottom: -35%;
+     }
+     main{
+          .trigger.active{
+               #topImg_2{
+                    transform: translateY(-3em);
+               }
+          }
+          .carTopText{
+               h3{
+                    transform: translateY(-4em);
+               }
+               p{
+                    transform: translateY(2em);
+               }
+               
+          }
+     }
+    
+         
+}
+
+@media all and (min-width:1440px) and (max-width:1900px) {
+    header{
+          nav{
+               justify-content: space-around;
+          }
+          h1{
+               padding-bottom: 10%;
+          }
+     } 
+     main{
+          .trigger.active{
+               #topImg_2{
+                    transform: translateY(-4em);
+               }
           }
      }
 }
